# bad_apple_ascii_dart

./: .metadata  LICENSE  README.md  ffigen.yaml  pubspec.yaml
.github/workflows/: dart.yml
example/: README.md  pubspec.yaml
example/ios/Runner/: Info.plist
example/ios/Runner.xcodeproj/: project.pbxproj
example/lib/: main.dart
example/macos/Runner.xcodeproj/: project.pbxproj
example/macos/Runner.xcodeproj/xcshareddata/xcschemes/: Runner.xcscheme
example/macos/Runner/Configs/: AppInfo.xcconfig
example/windows/: CMakeLists.txt
example/windows/flutter/: generated_plugins.cmake
example/windows/runner/: Runner.rc  main.cpp
ios/: bad_apple_ascii_dart.podspec
lib/: bad_apple_ascii_dart.dart  bad_apple_ascii_dart_bindings_generated.dart  generate_ascii.dart
macos/: bad_apple_ascii_dart.podspec
macos/Classes/: bad_apple_ascii_dart.c
src/: CMakeLists.txt  bad_apple_ascii_dart.c
windows/: CMakeLists.txt
